--- a/frontend/mlm-angular/src/app/pages/login/login.component.html
+++ b/frontend/mlm-angular/src/app/pages/login/login.component.html
@@ -46,7 +46,7 @@
                 <p class="text-muted">Sign in to continue to Velzon.</p>
               </div>
               <div class="p-2 mt-4">
-                <form
+                <form   (ngSubmit)="login()"
                 >
                   <div class="mb-3">
                     <label for="username" class="form-label">Username</label>
