--- a/frontend/mlm-angular/src/app/pages/login/login.component.html
+++ b/frontend/mlm-angular/src/app/pages/login/login.component.html
@@ -36,7 +36,7 @@
       </div>
       <!-- end row -->
 
-      
+
       <div class="row justify-content-center">
         <div class="col-md-8 col-lg-6 col-xl-5">
           <div class="card mt-4">
@@ -109,25 +109,25 @@
                     <div class="p-2">
                       <button
                         type="button"
-                        class="btn btn-primary btn-icon waves-effect waves-light"
+                        class="btn btn-primary btn-icon waves-effect waves-light m-1"
                       >
                         <i class="ri-facebook-fill fs-16"></i>
                       </button>
                       <button
                         type="button"
-                        class="btn btn-danger btn-icon waves-effect waves-light"
+                        class="btn btn-danger btn-icon waves-effect waves-light m-1"
                       >
                         <i class="ri-google-fill fs-16"></i>
                       </button>
                       <button
                         type="button"
-                        class="btn btn-dark btn-icon waves-effect waves-light"
+                        class="btn btn-dark btn-icon waves-effect waves-light m-1"
                       >
                         <i class="ri-github-fill fs-16"></i>
                       </button>
                       <button
                         type="button"
-                        class="btn btn-info btn-icon waves-effect waves-light"
+                        class="btn btn-info btn-icon waves-effect waves-light m-1"
                       >
                         <i class="ri-twitter-fill fs-16"></i>
                       </button>
@@ -144,7 +144,7 @@
             <p class="mb-0">
               Don't have an account ?
               <a
-                href="auth-signup-basic.html"
+                routerLink="/signup"
                 class="fw-semibold text-primary text-decoration-underline"
               >
                 Signup
