--- a/frontend/mlm-angular/src/app/authentication/signup/signup.component.html
+++ b/frontend/mlm-angular/src/app/authentication/signup/signup.component.html
@@ -77,8 +77,8 @@
                 <mat-form-field class="example-full-width" appearance="outline">
                   <mat-label>Confirm Password</mat-label>
                   <input matInput formControlName="cpassword" [type]="chide ? 'password' : 'text'" required>
-                  <a href="#" onClick="return false;" matSuffix (click)="chide = !chide"
-                    [attr.aria-label]="'Hide password'" [attr.aria-pressed]="chide">
+                  <a href="#" onClick="return false;" matSuffix (click)="hide = !hide"
+                    [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                     <mat-icon class="material-icons-two-tone color-icon m-3" matSuffix>
                       {{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                   </a>
