--- a/frontend/mlm-angular/src/app/authentication/signup/signup.component.html
+++ b/frontend/mlm-angular/src/app/authentication/signup/signup.component.html
@@ -23,27 +23,27 @@
             <div class="row">
               <div class="col-xl-12col-lg-12 col-md-12 col-sm-12 mb-2">
                 <mat-form-field class="example-full-width" appearance="outline">
-                  <mat-label>Name</mat-label>
-                  <input matInput formControlName="name" required>
+                  <mat-label>Username</mat-label>
+                  <input matInput formControlName="username" required>
                   <mat-icon class="material-icons-two-tone color-icon p-3" matSuffix>face</mat-icon>
-                  <mat-error *ngIf="authForm.get('name')?.hasError('required')">
+                  <mat-error *ngIf="authForm.get('username')?.hasError('required')">
                     Name is required
                   </mat-error>
                 </mat-form-field>
               </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
               <div class="col-xl-12col-lg-12 col-md-12 col-sm-12 mb-2">
                 <mat-form-field class="example-full-width" appearance="outline">
                   <mat-label>Mobile</mat-label>
                   <input matInput formControlName="mobile" required>
                   <mat-icon class="material-icons-two-tone color-icon p-3" matSuffix>phone</mat-icon>
-                  <mat-error *ngIf="authForm.get('mobile')?.hasError('required')">
+                  <mat-error>
                     Mobile is required
                   </mat-error>
                 </mat-form-field>
               </div>
-            </div>
+            </div> -->
             <div class="row">
               <div class="col-xl-12col-lg-12 col-md-12 col-sm-12 mb-2">
                 <mat-form-field class="example-full-width" appearance="outline">
@@ -96,7 +96,7 @@
               </div>
             </div>
             <div class="container-auth-form-btn">
-              <button mat-raised-button color="primary" class="auth-form-btn" [disabled]="!authForm.valid "
+              <button mat-raised-button color="primary" class="auth-form-btn"
                 type="submit">
                 Register
               </button>
