--- a/frontend/mlm-angular/src/app/layout/sidebar/sidebar.component.html
+++ b/frontend/mlm-angular/src/app/layout/sidebar/sidebar.component.html
@@ -5,8 +5,7 @@
       <ul class="nav navbar-nav flex-row">
         <li class="nav-item logo">
           <a class="navbar-brand" routerLink="dashboard/dashboard1">
-            <img src="assets/images/logo.png" alt="" />
-            <span class="logo-name">demo domain </span>
+            <img class="img-fluid w-75" src="assets/images/logo.png" alt="" />
           </a>
         </li>
         <li class="nav-item nav-toggle">
