--- a/frontend/mlm-angular/src/app/authentication/signup/signup.component.html
+++ b/frontend/mlm-angular/src/app/authentication/signup/signup.component.html
@@ -96,7 +96,7 @@
               </div>
             </div>
             <div class="container-auth-form-btn">
-              <button mat-raised-button color="primary" class="auth-form-btn" [disabled]="!authForm.valid "
+              <button mat-raised-button color="primary" class="auth-form-btn"
                 type="submit">
                 Register
               </button>
